# linux_project_hw

./: Makefile.am  README.md  configure.ac  hello_func.c  hello_make.h  hello_world.c
